IC-fixed-user-comment-container-overlapping-delete-modal-box-shadow

--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -6,6 +6,7 @@
   height: 12.5rem;
   top: 30%;
   left: 35%;
+  z-index: 10;
   background: white;
   box-shadow: 0 0 0 1000px $TranslucentGray;
   border-radius: 0.5rem;
