--- a/src/components/UserComment/UserComment.scss
+++ b/src/components/UserComment/UserComment.scss
@@ -37,6 +37,7 @@
   @media (max-width: $small-screen) {
     width: 100%;
     height: 10rem;
+    z-index: 0;
     flex-direction: column;
   }
   button {
